--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sekuro</title>
+    <title>Sekuro Village Beach Resort Virtual Reality</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=device-width, viewport-fit=cover" />
     <link rel="preload" href="script.js?v=1666754582231" as="script"/>
